--- a/starbucksHome.html
+++ b/starbucksHome.html
@@ -38,13 +38,14 @@
         </div>
     </nav>
     <div class="block1">
-        <div style="width: 80%;display: flex;justify-content: space-between;margin: auto;">
+        <div style="width: 80%;display: flex;justify-content: space-between;margin: auto;height: auto;">
             <div class="left1" style="font-size:24px;font-family:Arial, Helvetica, sans-serif;color: white;">
                 Starbucks Reward
             </div>
             <div class="right1">
 
-                <button style="font-size:12px;font-family:Arial, Helvetica, sans-serif;color: white;background-color: transparent;border: 1px solid white;border-radius:20px;width: 100px;height: 30px;">
+                <button
+                    style="font-size:12px;font-family:Arial, Helvetica, sans-serif;color: white;background-color: transparent;border: 1px solid white;border-radius:20px;width: 100px;height: 30px;">
                     Know more
                 </button>
 
@@ -53,6 +54,254 @@
 
 
     </div>
+
+    <div class="block2">
+        <div class="sub2">
+            <div class="left2" style="position: relative;">
+                <div class="imgleft2">
+                    <img src="./BEVERAGE.png" alt="" style="width: 100px;height: 200px;">
+                </div>
+                <div class="contentLeft2"
+                    style="width:100%;height: 100%; position: absolute;top: 0; left: 0; right: 0; bottom: 0;">
+                    <div class="new"
+                        style="position: relative;top: 30px;left: 150px;font-family: Arial, Helvetica, sans-serif;">
+                        New
+                    </div>
+                    <div class="try"
+                        style="position: relative;top: 50px;left: 150px;width:300px;font-size: 20px;font-weight: bold;font-family: Arial, Helvetica, sans-serif;">
+                        Try the blonde Roast!
+                    </div>
+                    <div class="bright"
+                        style="position: relative;top: 70px;left: 150px;width:500px;font-family: Arial, Helvetica, sans-serif;">
+                        Bright, sweet citrus notes and a smooth body makes this a classic.
+                    </div>
+
+                </div>
+            </div>
+            <div class="right2" style="margin-top: 150px;margin-right: 50px;">
+                <div class="buttonR2">
+                    <button
+                        style="height: 50px;width:200px;border-radius:20px;background-color: rgb(23, 50, 23);color: white;">Know
+                        more</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="block3">
+        <div class="sub3">
+            <div class="head3"
+                style="font-size: 24px;font-family: Arial, Helvetica, sans-serif;font-weight: bold;text-align: left;">
+                Handcrafted Curations
+            </div>
+            <div class="card">
+                <div class="item-card">
+                    <div class="image3" style="height:100px;width:100px;border-radius: 50%;">
+                        <img src="./Bestseller.webp" alt="" style="height: 100px;width: 100px;border-radius: 50%;">
+                    </div>
+                    <div class="imgHead3">
+                        Bestseller
+                    </div>
+                </div>
+                <div class="item-card">
+                    <div class="image3" style="height:100px;width:100px;border-radius: 50%;">
+                        <img src="./Drinks.webp" alt="" style="height: 100px;width: 100px;border-radius: 50%;">
+                    </div>
+                    <div class="imgHead3">
+                        Drinks
+                    </div>
+                </div>
+                <div class="item-card">
+                    <div class="image3" style="height:100px;width:100px;border-radius: 50%;">
+                        <img src="./Food.webp" alt="" style="height: 100px;width: 100px;border-radius: 50%;">
+                    </div>
+                    <div class="imgHead3">
+                        Food
+                    </div>
+                </div>
+                <div class="item-card">
+                    <div class="image3" style="height:100px;width:100px;border-radius: 50%;">
+                        <img src="./Merchandise.webp" alt="" style="height: 100px;width: 100px;border-radius: 50%;">
+                    </div>
+                    <div class="imgHead3">
+                        Merchandise
+                    </div>
+                </div>
+                <div class="item-card">
+                    <div class="image3" style="height:100px;width:100px;border-radius: 50%;">
+                        <img src="./CoffeeAtHome.webp" alt="" style="height: 100px;width: 100px;border-radius: 50%;">
+                    </div>
+                    <div class="imgHead3">
+                        Coffee At Home
+                    </div>
+                </div>
+                <div class="item-card">
+                    <div class="image3" style="height:100px;width:100px;border-radius: 50%;">
+                        <img src="./ReadyToEat.webp" alt="" style="height: 100px;width: 100px;border-radius: 50%;">
+                    </div>
+                    <div class="imgHead3">
+                        Ready to Eat
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="block4">
+        <div class="sub4">
+            <br>
+            <div class="upper4">
+                <div class="upper-left">
+                    Barista Recommends
+                </div>
+                <div class="upper-right">
+                    <div class="viewMenu" style="margin-top: 25px;color: green;">View Menu</div>
+                    <div class="image4"><img src="./greyleafright.svg" alt="" style="height: 60px;width: 60px;"></div>
+                </div>
+            </div>
+            <div class="down4" style="margin:auto;width:85%;height: 250px;">
+                <div class="slip"
+                    style="width: 350px;height: 140px;border-radius:8px;padding: 16px 24px;background-color: white;box-shadow:4px;border: 0.5px solid rgb(209, 203, 203);">
+                    <div class="upper-slip">
+                        <div class="upperSl-left">
+                            <img src="./Bestseller.webp" alt=""
+                                style="    width: 80px;height: 80px;border-radius: 8px;object-fit: cover;">
+                        </div>
+                        <div class="upperSl-right" style="width:200px;text-align: left;">
+
+                            <div class="SlipIco"><img src="./vegIcon.svg" alt=""></div>
+                            <div class="java" style="text-align: left;">Java Chip Frappucino</div>
+                            <div class="tall" style="font-size: x-small;color:gray;">TALL (354ml).392kcal</div>
+                        </div>
+                    </div>
+                    <br><br>
+                    <div class="lower-slip">
+                        <div class="lowerSl-left" style="font-weight: bold;">
+                            ₹ 441.00
+                        </div>
+                        <div class="lowerSl-Right">
+                            <button class="addItem"
+                                style="border-radius: 15px;background-color: rgb(18, 217, 61);font: size 12px;height: 30px;width: 100px;color: white;">Add
+                                item</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <br><br>
+    <div class="block5">
+        <div class="sub5">
+            <div class="upper5" style="display: flex;justify-content: space-between;">
+                <div class="up5left"
+                    style="font-size:x-large;font-family: Arial, Helvetica, sans-serif;font-weight: bolder;color: rgb(7, 46, 20);">
+                    Learn more about the world of coffee!</div>
+                <br><br><br>
+                <div class="up5right"
+                    style="font-family: Arial, Helvetica, sans-serif;color: rgb(24, 122, 22);font-size:smaller;font-weight: bold;">
+                    Discover More</div>
+            </div>
+            <div class="background5">
+                <div class="back5-top"> <button
+                        style="font-size: 14px;font-family: Arial, Helvetica, sans-serif;color: rgb(8, 236, 160);margin-left: 15px;margin-top: 15px;border-radius: 6pxpx;">coffee
+                        culture</button></div>
+                <br><br><br><br><br><br>
+                <div class="back5-down" style="margin-left: 50px;">
+                    <div
+                        style="font-size:xx-large;font-family: Arial, Helvetica, sans-serif;font-weight:bolder;color: white;">
+                        Art & Science of Coffee Brewing</div>
+                    <br><br>
+                    <div style="color: white;"> Master the perfect brew with Starbucks! Learn the art and science of
+                        coffee brewing. </div>
+                    <br><br>
+                    <div class="back5-Button">
+                        <button style="width:200px;height: 32px;background-color: white;border-radius: 16px;">Learn
+                            more</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+    <br><br><br><br><br><br>
+    <footer>
+        <div class="sub-foot">
+            <div class="foot-img" style="margin-top: 30px;">
+                <img src="./logo.png" alt="">
+            </div>
+            <div class="row">
+                <div style="font-weight: bolder;font-size:18px;">About Us</div>
+                <div>Our Heritage</div>
+                <div>Coffeehouse</div>
+                <div>Our Company</div>
+            </div>
+            <div class="row">
+                <div style="font-weight: bolder;font-size:18px;">Responsibility</div>
+                <div>Diversity</div>
+                <div>Community</div>
+                <div>Ethical Sourcing</div>
+                <div>Environmental Stewardship</div>
+                <div>Learn More</div>
+            </div>
+            <div class="row">
+                <div style="font-weight: bolder;font-size:18px;">Quick Links</div>
+                <div>Privacy Policy</div>
+                <div>FAQs</div>
+                <div>Customer Service</div>
+                <div>Delivery</div>
+                <div>Loyalty Program Terms and Conditions</div>
+                <div>Starbucks India Mobile App Terms of Use</div>
+                <div>Special Discount 25% Off Offer</div>
+                <div>Get 2x Bonus Stars</div>
+                <div>Starbucks® Rewards Program</div>
+                <div>Beverage Subscription</div>
+                <div>Monsoon Members Gift</div>
+                <div>Monsoon Menu LTO 10% Offer</div>
+            </div>
+            <div class="row" style="font-weight: bolder;font-size:18px;">
+                <div>Legal</div>
+                <div>Disclaimer</div>
+
+            </div>
+
+        </div>
+        <div class="sub22">
+            <div class="sub-foot1">
+                <div class="head-foot"  style="font-size: large;font-weight: bolder;font-family: sans-serif;color: white;">SOCIAL MEDIA</div>
+                <div class="img-foot1">
+                    <img src="./instagram.svg" alt="">
+                    <img src="./facebook.svg" alt="">
+                    <img src="./twitter.svg" alt="">
+                </div>
+            </div>
+            <div class="app-icon">
+            <img src="./appstoreiOS.png" alt=""><br>
+            <img src="././appstoreAndroid.png" alt=""><br>
+            </div>
+        </div>
+        <div class="last">
+            <div class="left-last">
+                <div>       Web Accessiblity  |</div>
+                <div>   Privacy Statement  |</div>
+                <div>   Terms of Use  |</div>
+                <div>   Contact Us</div>
+            </div>
+            <div class="right-last" style="font-size: xx-small;">© 2025 Starbucks Coffee Company. All rights reserved.</div>
+        </div>
+
+
+    </footer>
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
